k8s/nginxgw/aks-poc-sample-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-poc-app-nginxgw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-poc-app-nginxgw
  template:
    metadata:
      labels:
        app: aks-poc-app-nginxgw
    spec:
      containers:
      - name: aks-poc-sample-app
        image: funcregistry.azurecr.io/poc_app:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            port: 80
            path: /api/todoItems

---
apiVersion: v1
kind: Service
metadata:
  name: aks-poc-service-app-nginxgw
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-poc-app-nginxgw
