k8s/nginxgw/aks-poc-sample-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-sample-poc  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-poc-nginx
  template:
    metadata:
      labels:
        app: aks-poc-nginx
    spec:
      containers:
      - name: aks-poc-sample-nginx
        image: funcregistry.azurecr.io/poc_web:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aks-poc-service-nginx-nginxgw
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-poc-nginx
